force-app/main/default/objects/Invoice__c/fields/Count_Objects__c.field-meta.xml
<CustomField>
    <fullName>Count_Objects__c</fullName>
    <label>Count Objects</label>
    <summaryForeignKey>SellItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>