force-app/main/default/objects/Invoice__c/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <label>Maximum Value</label>
    <summarizedField>SellItem__c.SellItem_Price__c</summarizedField>
    <summaryForeignKey>SellItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>