force-app/main/default/objects/Invoice__c/fields/Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price__c</fullName>
    <label>Minimum Price</label>
    <summarizedField>SellItem__c.SellItem_Price__c</summarizedField>
    <summaryForeignKey>SellItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>