force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Price__c</fullName>
    <label>Total Invoice Price</label>
    <summarizedField>SellItem__c.Total_Selling_Price__c</summarizedField>
    <summaryForeignKey>SellItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>