force-app/main/default/objects/Invoice__c/validationRules/Closing_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Invoice_Status__c ,&quot;Closed&quot;),
ISBLANK( Invoice_Date__c )
)</errorConditionFormula>
    <errorMessage>An Order with a closed invoice must have a closing date.</errorMessage>
</ValidationRule>